src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_node_only_method_forbidden.snap
---
source: src/server/ws/golden_tests.rs
expression: normalized
---
{
  "error": {
    "code": "INVALID_REQUEST",
    "message": "method 'plugins.bins' is only allowed for node role",
    "retryable": false
  },
  "ok": false
}
