src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_node_pair_list.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 413
expression: normalized
---
{
  "ok": true,
  "result": {
    "paired": [],
    "pending": []
  }
}
