src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_plugins_status.snap
---
source: src/server/ws/golden_tests.rs
expression: normalized
---
{
  "ok": true,
  "result": {
    "activationErrorCount": 0,
    "configuredPluginPathCount": 0,
    "plugins": [],
    "pluginsEnabled": true,
    "restartRequiredForChanges": true
  }
}
