src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_sessions_list_empty.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 354
expression: normalized
---
{
  "ok": true,
  "result": {
    "count": "<SESSION_COUNT>",
    "defaults": {
      "contextTokens": null,
      "model": null,
      "modelProvider": null
    },
    "path": "<PATH>",
    "sessions": "<SESSIONS_LIST>",
    "ts": "<TIMESTAMP>"
  }
}
