src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_skills_bins.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 429
expression: normalized
---
{
  "ok": true,
  "result": {
    "bins": []
  }
}
