src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_skills_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 515
expression: normalized
---
{
  "ok": true,
  "result": {
    "activationErrorCount": 0,
    "configuredPluginPathCount": 0,
    "pluginsEnabled": true,
    "restartRequiredForChanges": true,
    "skills": []
  }
}
