src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_talk_devices.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 699
expression: normalized
---
{
  "ok": true,
  "result": {
    "inputDevices": [
      {
        "default": true,
        "id": "default",
        "name": "Default Input"
      }
    ],
    "outputDevices": [
      {
        "default": true,
        "id": "default",
        "name": "Default Output"
      }
    ],
    "selectedInput": null,
    "selectedOutput": null
  }
}
