src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_talk_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 401
expression: normalized
---
{
  "ok": true,
  "result": {
    "active": "<TALK_ACTIVE>",
    "autoRespond": "<TALK_AUTORESPOND>",
    "availableModes": [
      "off",
      "push-to-talk",
      "voice-activated",
      "continuous"
    ],
    "inputDevice": "<TALK_INPUTDEVICE>",
    "mode": "<TALK_MODE>",
    "outputDevice": "<TALK_OUTPUTDEVICE>",
    "silenceTimeoutMs": "<TALK_SILENCETIMEOUTMS>",
    "vadThreshold": "<TALK_VADTHRESHOLD>"
  }
}
