src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_tts_providers.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 397
expression: normalized
---
{
  "ok": true,
  "result": {
    "current": "<TTS_CURRENT>",
    "providers": [
      {
        "available": true,
        "id": "system",
        "name": "System Voice"
      },
      {
        "available": false,
        "id": "elevenlabs",
        "name": "ElevenLabs"
      },
      {
        "available": false,
        "id": "openai",
        "name": "OpenAI TTS"
      },
      {
        "available": false,
        "id": "google",
        "name": "Google Cloud TTS"
      }
    ]
  }
}
