src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_tts_status.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 396
expression: normalized
---
{
  "ok": true,
  "result": {
    "enabled": "<TTS_ENABLED>",
    "pitch": "<TTS_PITCH>",
    "provider": "<TTS_PROVIDER>",
    "rate": "<TTS_RATE>",
    "voice": "<TTS_VOICE>",
    "volume": "<TTS_VOLUME>"
  }
}
