src/server/ws/snapshots/cara__server__ws__golden_tests__golden_trace__golden_unknown_method.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 460
expression: normalized
---
{
  "error": {
    "code": "UNAVAILABLE",
    "message": "method unavailable",
    "retryable": true
  },
  "ok": false
}
